--- a/css/styles.css
+++ b/css/styles.css
@@ -54,23 +54,28 @@ body {
   margin-right: 5px;
   margin-bottom:5px;
   border-style: solid;
-  border-color: black;
+  border-color: #e2e2e2;
   padding: 20px;
   border-radius:5px;
   border-width:1px;
 }
-.longwidget .form-control {
-  margin-bottom: 10%;
+
+.longwidget:hover, .widget:hover {
+  border-color: black;
+}
+.longwidget .form-control, .widget .form-control {
   max-width: 200px;
 }
+
 .widget {
   width: 100%;
   margin-right: 5px;
   margin-bottom:5px;
   border-style: solid;
-  border-color: black;
+  border-color: #e2e2e2;
   border-radius:5px;
   border-width:1px;
+  padding: 20px;
 }
 .widget h5 {
   margin-left: 10px;
@@ -78,6 +83,7 @@ body {
   padding: 0px;
   color: gray;
   font-size: 16pt;
+
 }
 .widget h4 {
   margin-top: 5px;
@@ -102,6 +108,14 @@ body {
 }
 .widget:hover .widget-footer p {
 color:gray;
+}
+.longwidget img {
+  margin-top: calc(15% - 70px);
+  margin-left: calc(100% - 50px);
+}
+.widget img {
+  margin-top: calc(100% - 20px);
+  margin-left: calc(100% - 30px);
 }
 .widget input {
   margin-left:5%;
