--- a/css/control-panels-styles.css
+++ b/css/control-panels-styles.css
@@ -73,6 +73,15 @@ body {
   flex-direction: column;
 
 }
+.danger-box {
+  border-style: solid;
+  border-width: 1px;
+  border-color: red;
+  border-radius: 5px;
+  text-align: center;
+  padding: 20px;
+  margin-top: 20px;
+}
 .panel h5 {
   min-height: 3em;
 }
