--- a/css/styles.css
+++ b/css/styles.css
@@ -82,13 +82,22 @@ body {
   margin-top: 12%;
 }
 
+
 .longwidget:hover, .widget:hover {
   border-color: black;
 }
 .longwidget .form-control, .widget .form-control {
   max-width: 200px;
 }
-
+.danger-box {
+  border-style: solid;
+  border-width: 1px;
+  border-color: red;
+  border-radius: 5px;
+  text-align: center;
+  padding: 20px;
+  margin-top: 20px;
+}
 .widget {
   width: 300px;
   height:300px;
