--- a/css/control-panels-styles.css
+++ b/css/control-panels-styles.css
@@ -41,7 +41,10 @@ body {
 .data-unit p {
   margin-bottom: 0px;
 }
-
+.content .data-unit p, h6 {
+  margin-left: 0px;
+  text-align: left;
+}
 
 /* Control Panels */
 .bar {
@@ -64,10 +67,6 @@ body {
   text-align: center;
   margin-right: 5px;
   margin-bottom:5px;
-  border-style: solid;
-  border-color: black;
-  padding: 10px;
-  min-width:144px;
 
   display: flex;
   flex-direction: column;
@@ -161,7 +160,7 @@ body {
 }
 .widget-setting-group {
   display: flex;
-  justify-content: space-around;
+  justify-content: flex-start;
   margin-bottom: 20px;
 }
 .left-setting {
@@ -170,12 +169,33 @@ body {
 }
 .widget-setting-label {
   color: rgba(0, 0, 0, 0.54);
-  margin-left: 20%;
+  margin-left: 25%;
+  width: 15%;
+}
+#gray {
+  margin-top: -25px;
+    color: rgba(0, 0, 0, 0.54);
+}
+#below {
+
+margin-bottom: -5px;
+}
+
+.content .widget-setting-label p {
+  text-align: left;
 }
 .widget-setting {
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 3%;
+  text-align: left;
 
+}
+.content .widget-setting p {
+  text-align: left;
+  margin-left: 0px;
+}
+hr {
+  margin-left: 25%;
+  width:50%;
 }
 
 .notification {
