--- a/css/control-panels-styles.css
+++ b/css/control-panels-styles.css
@@ -67,7 +67,10 @@ body {
   text-align: center;
   margin-right: 5px;
   margin-bottom:5px;
-
+  border-style: solid;
+  border-width: 1px;
+  border-color: black;
+  border-radius: 5px;
   display: flex;
   flex-direction: column;
 
