--- a/css/control-panels-styles.css
+++ b/css/control-panels-styles.css
@@ -131,6 +131,7 @@ body {
   }
   .panels {
     justify-content: flex-start;
+    margin-left: calc(50% - 140px * 2);
   }
   a.container {
     width: 49%;
@@ -145,6 +146,22 @@ body {
   }
   .widget p {
     width: calc(100% - 155px);
+  }
+
+}
+
+@media screen and (min-width: 950px)
+{
+  .panels {
+      margin-left: calc(50% - 140px * 3);
+
+  }
+}
+@media screen and (min-width: 1200px)
+{
+  .panels {
+      margin-left: calc(50% - 140px * 4);
+
   }
 }
 
