--- a/css/control-panels-styles.css
+++ b/css/control-panels-styles.css
@@ -1,3 +1,24 @@
+/*Promo Page */
+#promo-main {
+  height: calc(100vh - 200px);
+  padding-top: 20%;
+  padding-bottom: 20%;
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 5px;
+  margin-bottom: 150px;
+}
+
+/* Register Page */
+.register-header p {
+  margin-bottom: 20px;
+}
+.register-header a{
+  margin-right: 20px;
+}
+.register-container {
+  margin-top: 50px;
+}
 .panels {
   display: flex;
   flex-wrap: wrap;
