--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 .panels {
   display: flex;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: center;
 
 }
 .centered-content {
@@ -186,6 +186,9 @@ color:gray;
   .longwidget, .bar {
     width: 605px;
 
+  }
+  .panels {
+    justify-content: flex-start;
   }
 }
 
