--- a/css/control-panels-styles.css
+++ b/css/control-panels-styles.css
@@ -55,11 +55,14 @@ body {
 }
 .data-unit {
   margin-bottom: 20px;
+  display: flex;
+  flex-wrap: wrap;
 }
 .data-unit h6 {
   font-size: 12pt;
   color: rgba(0, 0, 0, 0.54);
   margin-top: 0px;
+
 }
 .data-unit p {
   margin-bottom: 0px;
@@ -81,11 +84,7 @@ body {
   padding-top: 8px;
   min-width: 100px;
 }
-.panel {
 
-    width: calc(142px * 8 + 5px);
-  margin-left: calc(50% - 142px * 4 + 2.5px);
-}
 .panel-body {
   padding: 20px;
 }
@@ -109,6 +108,7 @@ body {
 .title {
   margin-right: auto;
   margin-left: auto;
+  margin-bottom: 5px;
 }
 .panel-tile {
   text-align: center;
@@ -192,55 +192,7 @@ p.status {
  text-align: center;
 }
 
-@media screen and (min-width: 680px) {
-  .widgets {
-    justify-content: space-between;
 
-  }
-  .panels, .bar {
-    justify-content: flex-start;
-    margin-left: calc(50% - 140px * 2 + 2.5px);
-  }
-  .bar{
-    margin-right: calc(50% - 140px * 2 + 2.5px);
-  }
-  a.container {
-    width: 49%;
-
-  }
-
-}
-
-@media screen and (min-width: 800px) {
-  .img {
-    width:150px;
-  }
-  .widget p {
-    width: calc(100% - 155px);
-  }
-
-}
-
-@media screen and (min-width: 980px)
-{
-  .panels, .bar {
-      margin-left: calc(50% - 142px * 3 + 2.5px);
-
-  }
-  .bar{
-    margin-right: calc(50% - 142px * 3 + 2.5px);
-  }
-}
-@media screen and (min-width: 1280px)
-{
-  .panels, .bar {
-      margin-left: calc(50% - 142px * 4 + 2.5px);
-
-  }
-  .bar{
-    margin-right: calc(50% - 142px * 4 + 2.5px);
-  }
-}
 
 /*Widget settings*/
 .title {
@@ -258,23 +210,40 @@ p.status {
 .widget-setting-group {
   display: flex;
   justify-content: flex-start;
+  flex-wrap: wrap;
 }
 .left-setting {
   margin-left: 20%;
   visibility: hidden;
 }
 .widget-setting-category {
-  width: 15%;
+  width: 0%;
   color: rgba(0, 0, 0, 0.54);
 }
 .widget-setting-label {
   color: rgba(0, 0, 0, 0.54);
-  margin-left: 10%;
-  width: 20%;
+  width: 40%;
 }
 p.editable {
   color: #34495e;
 }
+.block-inline {
+  display: flex;
+  flex-wrap: wrap;
+}
+.block-inline p {
+  margin-right: 0px;
+  width: 100%;
+}
+.block-inline h6 {
+  font-size: 12pt;
+  color: rgba(0, 0, 0, 0.54);
+  margin-top: -20px;
+  width: 100%;
+  text-align: center;
+
+}
+
 
 #token {
   background-color: transparent;
@@ -283,6 +252,8 @@ p.editable {
   border-style: solid;
   border-width: 1px;
   padding: 5px;
+  margin-left: auto;
+  margin-right: auto;
 
 }
 #gray {
@@ -294,18 +265,23 @@ p.editable {
 #below {
 
 margin-bottom: -5px;
+margin-right: 15px;
 }
 
 .content .widget-setting-label p {
-  text-align: left;
+  text-align: center;
+}
+.widget-setting-label {
+  width: 100%;
+  margin-bottom: -15px;
 }
 .widget-setting {
-  margin-left: 3%;
-  text-align: left;
+  width: 100%;
+  margin-bottom: 30px;
 
 }
 .content .widget-setting p {
-  text-align: left;
+  text-align: center;
   margin-left: 0px;
 }
 hr {
@@ -399,4 +375,113 @@ h5 {
 .content p {
   text-align: center;
   margin-left: 5px;
+}
+
+/* Media Queries */
+
+@media screen and (min-width: 680px) {
+  .widgets {
+    justify-content: space-between;
+
+  }
+  .panels, .bar {
+    justify-content: flex-start;
+    margin-left: calc(50% - 140px * 2 + 2.5px);
+  }
+  .bar{
+    margin-right: calc(50% - 140px * 2 + 2.5px);
+  }
+  a.container {
+    width: 49%;
+
+  }
+  .panel {
+    margin-left: calc(50% - 140px * 2 + 2.5px);
+    margin-right: calc(50% - 140px * 2 + 2.5px);
+  }
+
+
+
+
+
+}
+
+@media screen and (min-width: 800px) {
+  .img {
+    width:150px;
+  }
+  .widget p {
+    width: calc(100% - 155px);
+  }
+
+
+}
+
+@media screen and (min-width: 980px)
+{
+  .panels, .bar {
+      margin-left: calc(50% - 142px * 3 + 2.5px);
+
+  }
+  .bar{
+    margin-right: calc(50% - 142px * 3 + 2.5px);
+  }
+  .panel {
+    margin-left: calc(50% - 142px * 3 + 2.5px);
+    margin-right: calc(50% - 142px * 3 + 2.5px);
+  }
+  .widget-setting-category {
+    width: 10%;
+  }
+  .widget-setting-label {
+    margin-left: 10%;
+    width: 25%;
+  }
+  .widget-setting {
+    width: 55%;
+  }
+  .content .widget-setting-label p {
+    text-align: left;
+  }
+  .widget-setting-group {
+    flex-wrap: nowrap;
+  }
+
+  .content .widget-setting p {
+    text-align: left;
+    margin-left: 0px;
+  }
+  .block-inline p {
+    margin-right: 15px;
+    text-align: left;
+    width: auto;
+  }
+  .block-inline h6 {
+    font-size: 12pt;
+    color: rgba(0, 0, 0, 0.54);
+    margin-top: 8px;
+    text-align: left;
+    width: 50%;
+}
+#token {
+  margin-left: 0px;
+}
+@media screen and (min-width: 1280px)
+{
+  .panels, .bar {
+      margin-left: calc(50% - 142px * 4 + 2.5px);
+
+  }
+  .bar {
+    margin-right: calc(50% - 142px * 4 + 2.5px);
+  }
+  .panel {
+    margin-left: calc(50% - 142px * 4 + 2.5px);
+    margin-right: calc(50% - 142px * 4 + 2.5px);
+  }
+  .widget-setting {
+    margin-left: 3%;
+    text-align: left;
+
+  }
 }
