--- a/css/styles.css
+++ b/css/styles.css
@@ -77,6 +77,7 @@ body {
   padding: 20px;
   border-radius:5px;
   border-width:1px;
+  position: relative;
 }
 
 #settings {
@@ -120,6 +121,7 @@ body {
   border-radius:5px;
   border-width:1px;
   padding: 20px;
+  position: relative;
 }
 .widget h5 {
   margin-left: 10px;
@@ -128,12 +130,12 @@ body {
   color: gray;
   font-size: 16pt;
 
+
 }
 .longwidget h5 {
   margin-left: 10px;
   margin-top: 10px;
   margin-bottom:200px;
-
   padding: 0px;
   color: gray;
   font-size: 16pt;
@@ -153,14 +155,23 @@ body {
   text-align: center;
 }
 .widget-footer {
-  clear:both;
   text-align: center;
+  position: absolute;
+  top: 265px;
+  left: 100px;
+}
+.longwidget .widget-footer {
+  top: 240px;
+  left: 570px;
 }
 .widget-footer p {
   color:transparent;
 
 }
 .widget:hover .widget-footer p {
+color:gray;
+}
+.longwidget:hover .widget-footer p {
 color:gray;
 }
 .longwidget img {
